# qtxmlrpc

./: .hgignore  CMakeLists.txt  ProjectHome.md  call_GreatCode.bat  gc.cfg  qtxmlrpc.pro
client/: client.pri  client.pro
client/src/: clientprotocol.cpp  clientprotocol.h  httpclient.cpp  httpclient.h  httpsclient.cpp  httpsclient.h  xmlrpcclient.cpp  xmlrpcclient.h
qtxmlrpc/: qtxmlrpc.h  qtxmlrpc.hpp  qtxmlrpc.pro  qtxmlrpcconfig.hpp
qtxmlrpc/client/: clientprotocol.cpp  clientprotocol.h  httpclient.cpp  httpclient.h  xmlrpcclient.cpp  xmlrpcclient.h
qtxmlrpc/server/: deferredresult.cpp  deferredresult.h  httpserver.cpp  httpserver.h  protocol.cpp  protocol.h  xmlrpcserver.cpp  xmlrpcserver.h
qtxmlrpc/utils/: httpheader.cpp  logger.h  sslparams.cpp  sslparams.h  xmlrpcconv.cpp  xmlrpcconv.h
server/: server.pri  server.pro
server/src/: protocol.cpp  protocol.h  xmlrpcserver.cpp  xmlrpcserver.h
utils/: utils.pri  utils.pro
utils/src/: httpheader.cpp  httpheader.hpp  xmlrpcconv.cpp  xmlrpcconv.h
xmlrpctest/: client.py  xmlrpctest.pro
xmlrpctest/simpletest/: simpletest.pro
xmlrpctest/simpletest/src/: client.cpp  client.h  main.cpp  server.cpp  server.h
xmlrpctest/testClient/: app_res.qrc  testClient.pro
xmlrpctest/testClient/src/: main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui
xmlrpctest/testserver/: testserver.pro
xmlrpctest/testserver/src/: main.cpp  test_server.cpp  test_server.h
